--- a/client/nav.jade
+++ b/client/nav.jade
@@ -14,8 +14,8 @@
         li: a(href='/#/register') Register
         li: a(href='/#/login') Login
       ul.nav.navbar-nav.navbar-right(ng-show='email')
-        li: a(href='/#/') Home
-        li: a(href='/#/logout') {{email}}
         li: a(href='/#/profile') Profile
         li: a(href='/#/dashboard') Dashboard
+        li: a(href='/#/logout') Logout
+        li: a(href='') {{email}}
 
