--- a/client/views/profile/profile.jade
+++ b/client/views/profile/profile.jade
@@ -1,11 +1,11 @@
 .row
-  .col-xs-3
+  .col-xs-4
     h2 Info
     h4 Name: {{client.name}}
     h4 Age: {{client.age}}
     h4 Height: {{client.height}} inches
-    h4 Weight: {{client.weights[client.weights.length - 1].wt}} lbs.
-    h4 BMI:
+    h4 Weight: {{weight}} lbs.
+    h4 BMI: {{bmi}}
     h4 Last Weigh In: {{client.weights[client.weights.length -1].when | date:'MM/dd/yyyy'}}
     h4 Gender: {{client.gender}}
 
@@ -29,7 +29,7 @@
           option Male
           option Female
       button.btn.btn-primary(type='submit', ng-click='update(); toggleUserForm()') Update
-  .col-xs-6
+  .col-xs-4
     h4 Weight Graph  &  BMI Graph
     .panel
       .panel-heading
@@ -37,18 +37,18 @@
           .panel-body WtGraph
             #WtGoal
               #weightActualBar(ng-style='{height:client.goals.wt + "px"}')
-              #weightGoalBar(ng-style='{height:client.weights[client.weights.length - 1].wt + "px", position:absolute, bottom:0, left:20px}')
+              #weightGoalBar(ng-style='{height:client.weights[client.weights.length - 1].wt  , position:absolute, bottom:0, left:20px}')
 
 
 
 
 
-  .col-xs-3
+  .col-xs-4
     h2 Goals
     h4 Exercise Mins/Day: {{client.goals.exerMinsPerDay}}
     h4 Cals Consumed/Day: {{client.goals.calsPerDay}}
     h4 Weight: {{client.goals.weight}} lbs.
-    h4 BMI: {{client.goals.bmi}} 
+    h4 BMI: {{client.goals.bmi}}
     button.btn.btn-primary(ng-click='toggleGoalForm()') Edit Info
     form(role='form', novalidate, name='goalForm', ng-show='hideGoalForm')
       .form-group
