weight goal graph works

--- a/client/views/profile/profile.jade
+++ b/client/views/profile/profile.jade
@@ -1,66 +1,69 @@
 .row
   .col-xs-4
-    h2 Info
-    h4 Name: {{client.name}}
-    h4 Age: {{client.age}}
-    h4 Height: {{client.height}} inches
-    h4 Weight: {{weight}} lbs.
-    h4 BMI: {{bmi}}
-    h4 Last Weigh In: {{client.weights[client.weights.length -1].when | date:'MM/dd/yyyy'}}
-    h4 Gender: {{client.gender}}
+    .formBackground
+      h2 Info
+      h4 Name: {{client.name}}
+      h4 Age: {{client.age}}
+      h4 Height: {{client.height}} inches
+      h4 Weight: {{weight}} lbs.
+      h4 BMI: {{bmi}}
+      h4 Last Weigh In: {{client.weights[client.weights.length - 1].when | date:"MM/dd/yyyy"}}
+      h4 Gender: {{client.gender}}
 
-    button.btn.btn-primary(ng-click='toggleUserForm()') Edit Info
-    form(role='form', novalidate, name='profileForm', ng-show='hideUserForm')
-      .form-group
-        label(for='name') Name
-        input.form-control#name(required, ng-model='user.name', type='text', name='name', autofocus)
-      .form-group
-        label(for='age') Age
-        input.form-control#age(required, ng-model='user.age', type='number', name='age')
-      .form-group
-        label(for='height') Height
-        input.form-control#height(required, ng-model='user.height', type='number', name='height')
-      .form-group
-        label(for='weight') Weight
-        input.form-control#weight(required, ng-model='user.weight', type='number', name='weight')
-      .form-group
-        label(for='gender') Gender
-        select.form-control#gender(required, ng-model='user.gender', type='dropdown', name='gender')
-          option Male
-          option Female
-      button.btn.btn-primary(type='submit', ng-click='update(); toggleUserForm()') Update
+      button.btn.btn-primary(ng-click='toggleUserForm()') Edit Info
+      form(role='form', novalidate, name='profileForm', ng-show='hideUserForm')
+        .form-group
+          label(for='name') Name
+          input.form-control#name(required, ng-model='user.name', type='text', name='name', autofocus)
+        .form-group
+          label(for='age') Age
+          input.form-control#age(required, ng-model='user.age', type='number', name='age')
+        .form-group
+          label(for='height') Height
+          input.form-control#height(required, ng-model='user.height', type='number', name='height')
+        .form-group
+          label(for='weight') Weight
+          input.form-control#weight(required, ng-model='user.weight', type='number', name='weight')
+        .form-group
+          label(for='gender') Gender
+          select.form-control#gender(required, ng-model='user.gender', type='dropdown', name='gender')
+            option Male
+            option Female
+        button.btn.btn-primary(type='submit', ng-click='update(); toggleUserForm()') Update
   .col-xs-4
-    h4 Weight Graph  &  BMI Graph
     .panel
       .panel-heading
-        .panel-title Weight Graph
-          .panel-body WtGraph
-            #WtGoal
-              #weightActualBar(ng-style='{height:client.goals.wt + "px"}')
-              #weightGoalBar(ng-style='{height:client.weights[client.weights.length - 1].wt  , position:absolute, bottom:0, left:20px}')
+        .panel-title Goals
+          .panel-body Weight Goal
+            #weightGoal
+              #weightActualBar(ng-style='{height:client.goals.weight + "px"}')
+              #goalLabel ACTUAL
+              #weightGoalBar(ng-style='{height:weight + "px"}')
+              #actualLabel GOAL
 
 
 
 
 
   .col-xs-4
-    h2 Goals
-    h4 Exercise Mins/Day: {{client.goals.exerMinsPerDay}}
-    h4 Cals Consumed/Day: {{client.goals.calsPerDay}}
-    h4 Weight: {{client.goals.weight}} lbs.
-    h4 BMI: {{client.goals.bmi}}
-    button.btn.btn-primary(ng-click='toggleGoalForm()') Edit Info
-    form(role='form', novalidate, name='goalForm', ng-show='hideGoalForm')
-      .form-group
-        label(for='minutes') Exercise (mins/day)
-        input.form-control#minutes(required, ng-model='goals.exerMinsPerDay', type='text', name='minutes', autofocus)
-      .form-group
-        label(for='calories') Calories (consumed/day)
-        input.form-control#calories(required, ng-model='goals.calsPerDay', type='number', name='calories')
-      .form-group
-        label(for='goalWeight') Weight
-        input.form-control#goalWeight(required, ng-model='goals.weight', type='number', name='goalWeight')
-      .form-group
-        label(for='goalBmi') BMI
-        input.form-control#goalBmi(required, ng-model='goals.bmi', type='number', name='goalBmi')
-      button.btn.btn-primary(type='submit', ng-click='updateGoals(); toggleGoalForm()') Update
+    .formBackground
+      h2 Goals
+      h4 Exercise Mins/Day: {{client.goals.exerMinsPerDay}}
+      h4 Cals Consumed/Day: {{client.goals.calsPerDay}}
+      h4 Weight: {{client.goals.weight}} lbs.
+      h4 BMI: {{client.goals.bmi}}
+      button.btn.btn-primary(ng-click='toggleGoalForm()') Edit Info
+      form(role='form', novalidate, name='goalForm', ng-show='hideGoalForm')
+        .form-group
+          label(for='minutes') Exercise (mins/day)
+          input.form-control#minutes(required, ng-model='goals.exerMinsPerDay', type='text', name='minutes', autofocus)
+        .form-group
+          label(for='calories') Calories (consumed/day)
+          input.form-control#calories(required, ng-model='goals.calsPerDay', type='number', name='calories')
+        .form-group
+          label(for='goalWeight') Weight
+          input.form-control#goalWeight(required, ng-model='goals.weight', type='number', name='goalWeight')
+        .form-group
+          label(for='goalBmi') BMI
+          input.form-control#goalBmi(required, ng-model='goals.bmi', type='number', name='goalBmi')
+        button.btn.btn-primary(type='submit', ng-click='updateGoals(); toggleGoalForm()') Update
