--- a/client/views/profile/profile.less
+++ b/client/views/profile/profile.less
@@ -1,43 +1,44 @@
 .panel{
   position: relative;
+  padding: 10px;
 }
 
-#weightGoal{
+#weightGoal, #bmiGoal{
   height: 300px;
   width: 200px;
   position: relative;
 }
 
-#weightGoalBar{
+#weightGoalBar, #bmiGoalBar{
   border: 1px solid black;
   background-color: green;
   width: 60px;
   position: absolute;
-  right: 20px;
+  left: 30px;
   bottom: 10px;
 }
 
-#goalLabel{
-  height: 10px;
-  position: absolute;
-  bottom: 0;
-  right: 15px;
-}
-
-#weightActualBar{
-  border: 1px solid black;
-  background-color: blue;
-  width: 60px;
-  position: absolute;
-  left: 20px;
-  bottom: 10px;
-}
-
-#actualLabel{
+.goalLabel{
   height: 10px;
   position: absolute;
   bottom: 0;
   left: 25px;
+}
+
+#weightActualBar, #bmiActualBar{
+  border: 1px solid black;
+  background-color: blue;
+  width: 60px;
+  position: absolute;
+  right: 10px;
+  bottom: 10px;
+}
+
+.actualLabel{
+  height: 10px;
+  position: absolute;
+  bottom: 0;
+  right: 15px;
 }
 
 .formBackground{
