--- a/client/views/profile/profile.less
+++ b/client/views/profile/profile.less
@@ -3,6 +3,13 @@
   padding: 10px;
 }
 
+h2{
+  color: white;
+  size: 1.5 em;
+  font-weight: bold;
+  text-align: center;
+}
+
 #weightGoal, #bmiGoal{
   height: 300px;
   width: 200px;
