profile and dashboard pages

--- a/client/index.jade
+++ b/client/index.jade
@@ -31,6 +31,8 @@ html(ng-app='i-fit', lang='en')
     script(src='/views/register/register.js')
     script(src='/views/login/login.js')
     script(src='/views/logout/logout.js')
+    script(src='/views/profile/profile.js')
+    script(src='/views/dashboard/dashboard.js')
     script(src='/components/factories/home.js')
     script(src='/components/factories/user.js')
     script(src='/components/factories/http-interceptor.js')
