--- a/client/nav.jade
+++ b/client/nav.jade
@@ -16,4 +16,6 @@
       ul.nav.navbar-nav.navbar-right(ng-show='email')
         li: a(href='/#/') Home
         li: a(href='/#/logout') {{email}}
+        li: a(href='/#/profile') Profile
+        li: a(href='/#/dashboard') Dashboard
 
