--- a/client/views/dashboard/dashboard.jade
+++ b/client/views/dashboard/dashboard.jade
@@ -1,1 +1,36 @@
-h3 Dashboard
+.row
+  .col-xs-2
+    button.btn.btn-success(ng-click='toggleFood()') Add Food
+    form(role='form', novalidate, ng-show='hideFood', name='foodForm')
+      .form-group
+        label(for='name') Name
+        input.form-control#name(ng-minlength='1', required, ng-model='food.name', type='text', name='name', autofocus)
+      .form-group
+        label(for='type') Type
+        select.form-control#type(required, ng-model='food.type', type='dropdown', name='type')
+          option(ng-repeat='t in foodType') {{t}}
+      .form-group
+        label(for='calories') Calories
+        input.form-control#calories(required, ng-model='food.calories', type='number', name='calories')
+      .form-group
+        label(for='date') Date
+        input.form-control#date(required, ng-model='food.date', type='date', name='date')
+      button.btn.btn-primary(type='submit', ng-show='foodForm.$valid', ng-click='addFood()') Add Food
+  .col-xs-8
+    h3 Dashboard
+  .col-xs-2
+    button.btn.btn-success(ng-click='toggleFood()') Add Food
+    form(role='form', novalidate, ng-show='hideFood', name='foodForm')
+      .form-group
+        label(for='name') Name
+        input.form-control#name(ng-minlength='1', required, ng-model='food.name', type='text', name='name', autofocus)
+      .form-group
+        label(for='type') Type
+        select.form-control#type(required, ng-model='food.type', type='dropdown', name='type')
+          option(ng-repeat='t in foodType') {{t}}
+      .form-group
+        label(for='calories') Calories
+        input.form-control#calories(required, ng-model='food.calories', type='number', name='calories')
+      .form-group
+        label(for='date') Date
+        input.form-control#date(required, ng-model='food.date', type='date', name='date')
