--- a/client/views/profile/profile.jade
+++ b/client/views/profile/profile.jade
@@ -1,20 +1,22 @@
-h3 Profile
-
 .row
-  .col-xs-2
-    button.btn.btn-success(ng-click='toggleFood()') Add Food
-    form(role='form', novalidate, ng-show='hideFood', name='foodForm')
+  .col-xs-3
+    h4 Info
+    form(role='form', novalidate, name='profileForm')
       .form-group
         label(for='name') Name
-        input.form-control#name(ng-minlength='1', required, ng-model='food.name', type='text', name='name', autofocus)
+        input.form-control#name(ng-minlength='1', required, ng-model='user.name', type='text', name='name', autofocus)
       .form-group
-        label(for='type') Type
-        select.form-control#type(required, ng-model='food.type', type='dropdown', name='type')
-          option(ng-repeat='t in foodType') {{t}}
+        label(for='age') Age
+        input.form-control#age(required, ng-model='user.age', type='number', name='age')
       .form-group
-        label(for='calories') Calories
-        input.form-control#calories(required, ng-model='food.calories', type='number', name='calories')
+        label(for='height') Height
+        input.form-control#height(required, ng-model='user.height', type='number', name='height')
       .form-group
-        label(for='date') Date
-        input.form-control#date(required, ng-model='food.date', type='date', name='date')
-      button.btn.btn-primary(type='submit', ng-show='foodForm.$valid', ng-click='addFood()') Add Food
+        label(for='weight') Weight
+        input.form-control#weight(required, ng-model='user.weight', type='number', name='weight')
+      .form-group
+        label(for='gender') Gender
+        select.form-control#gender(required, ng-model='user.gender', type='dropdown', name='gender')
+          option Male
+          option Female
+      button.btn.btn-primary(type='submit', ng-show='profileForm.$valid', ng-click='update()') Update
