--- a/client/views/profile/profile.jade
+++ b/client/views/profile/profile.jade
@@ -4,7 +4,7 @@
     form(role='form', novalidate, name='profileForm')
       .form-group
         label(for='name') Name
-        input.form-control#name(ng-minlength='1', required, ng-model='user.name', type='text', name='name', autofocus)
+        input.form-control#name(ng-minlength='1', required, ng-model='user.name', type='text', name='name', autofocus, value='client.name')
       .form-group
         label(for='age') Age
         input.form-control#age(required, ng-model='user.age', type='number', name='age')
@@ -19,4 +19,23 @@
         select.form-control#gender(required, ng-model='user.gender', type='dropdown', name='gender')
           option Male
           option Female
+      button.btn.btn-primary(type='submit', ng-show='profileForm.$valid', ng-click='update()') Update
+  .col-xs-8
+    h4 Weight Graph
+    h4 BMI Graph
+  .col-xs-2
+    h4 Goals
+    form(role='form', novalidate, name='goalForm')
+      .form-group
+        label(for='name') Name
+        input.form-control#name(required, ng-model='goal.name', type='text', name='name', autofocus)
+      .form-group
+        label(for='weight') Weight
+        input.form-control#weight(required, ng-model='goal.weight', type='number', name='weight')
+      .form-group
+        label(for='bmi') BMI
+        input.form-control#bmi(required, ng-model='goal.bmi', type='number', name='bmi')
+      .form-group
+        label(for='weight') 
+        input.form-control#height(required, ng-model='user.height', type='number', name='height')
       button.btn.btn-primary(type='submit', ng-show='profileForm.$valid', ng-click='update()') Update
