--- a/client/index.jade
+++ b/client/index.jade
@@ -35,5 +35,7 @@ html(ng-app='i-fit', lang='en')
     script(src='/views/dashboard/dashboard.js')
     script(src='/components/factories/home.js')
     script(src='/components/factories/user.js')
+    script(src='/components/factories/food.js')
+    script(src='/components/factories/exercise.js')
     script(src='/components/factories/http-interceptor.js')
 
