--- a/client/views/profile/profile.less
+++ b/client/views/profile/profile.less
@@ -1,14 +1,13 @@
 #weightGoalBar{
   border: 1px solid black;
   background-color: green;
-  width: 40px
-  position: relative
+  width: 40px;
+  position: relative;
 }
 
 #weightActualBar{
   border: 1px solid black;
   background-color: blue;
-  height: 13px;
-  width: 100%;
-  position: relative
+  width: 40px;
+  position: relative;
 }
