--- a/client/index.less
+++ b/client/index.less
@@ -18,7 +18,9 @@
 @SILVER:  #DDDDDD;
 
 body{
-  background-color: @YELLOW;
+  background-image: url(http://graphics8.nytimes.com/images/2012/05/31/science/31exercise/31exercise-tmagArticle.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 input.ng-invalid, select.ng-invalid{
