--- a/client/views/dashboard/dashboard.jade
+++ b/client/views/dashboard/dashboard.jade
@@ -95,6 +95,7 @@
             th Time &nbsp
               a(href='', ng-click='sortExer = "time"'): span.i.fa.fa-angle-down &nbsp
               a(href='', ng-click='sortExer = "-time"'): span.i.fa.fa-angle-up
+            th Calories Burned
             th Notes
         tbody
           tr(ng-repeat='e in exercises | orderBy:sortExer')
@@ -104,4 +105,5 @@
             th {{e.distance}} mi.
             th {{e.type}}
             th {{e.time}}
+            th {{e.calsBurned}}
             th {{e.notes}}
