clean up styling for deployment

--- a/client/index.less
+++ b/client/index.less
@@ -18,7 +18,7 @@
 @SILVER:  #DDDDDD;
 
 body{
-  background-image: url(http://graphics8.nytimes.com/images/2012/05/31/science/31exercise/31exercise-tmagArticle.jpg);
+  background-image: url('/assets/img/food.png');
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -26,4 +26,3 @@ body{
 input.ng-invalid, select.ng-invalid{
   background-color: @RED;
 }
-
