--- a/client/views/home/home.jade
+++ b/client/views/home/home.jade
@@ -1,5 +1,7 @@
-h2 i-Fit helps u-Fit
-h2 into your clothes
-br
-h2 Join Today!
+.jumbotron
+  h1 i-Fit
+  h2 helps u-Fit
+  h2 into your clothes
+  br
+  h2: a(href='/#/register') Join Today!
 
