--- a/client/views/profile/profile.less
+++ b/client/views/profile/profile.less
@@ -10,6 +10,15 @@ h2{
   text-align: center;
 }
 
+.jumbotron{
+
+  h1, h2, h3{
+    text-align: center;
+    color: #000000;
+  }
+
+}
+
 #weightGoal, #bmiGoal{
   height: 300px;
   width: 200px;
